<resources>
    <string name="app_name">Transporte</string>
    <string name="descripcion_logo">Icono de la App</string>
    <string name="button_login">Ingresar</string>
    <string name="labelUsuario">Usuario:</string>
    <string name="label_contrasena">Contraseña:</string>
    <string name="label_empresa">Empresa:</string>
    <string name="button_aceptar">Aceptar</string>
    <string name="login_mensaje_invalido">Las credenciales son inválidos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_notas">Mis Notas</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>